--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Exercício 3</title>
+    <title>Form HTML</title>
 </head>
 
 <body>
 
-    <h1>EXERCÍCIO 3</h1>
+    <h1>INSERINDO OS DADOS</h1>
 
     <p> Faça uma página HTML com um formulário pedindo alguns dados de uma pessoa como: nome, idade, estado civil. 
 	Através do evento quero que você capture os dados e monte um objeto, e o imprima no console.log(). 
@@ -52,7 +52,7 @@
 
     <div>
 
-        <h1> EXERCÍCIO 4 </h1>
+        <h1> CONSULTANDO OS DADOS </h1>
 
         <p> Utilizando o exercício anterior, armazene os objetos criados em um array,
             e utilize os métodos de arrays para percorrer a lista, e imprimir apenas a propriedade 
